--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.swgas</groupId>
     <artifactId>ocs-utils</artifactId>
-    <version>1.8</version>
+    <version>1.8-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
