--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.swgas</groupId>
     <artifactId>ocs-utils</artifactId>
-    <version>1.9</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
+      <maven.compiler.source>1.9</maven.compiler.source>
+      <maven.compiler.target>1.9</maven.compiler.target>
     </properties>
     <!-- dummy needed for suppressing the missing scm url error for build.properties generation -->
     <scm>
